--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
@@ -42,8 +43,11 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "body-parser": "^1.17.2",
+    "bootstrap": "^3.3.7",
     "express": "^4.15.4",
     "express-session": "^1.15.5",
+    "jquery": "^3.2.1",
+    "md5.js": "^1.3.4",
     "mongoose": "^4.11.7",
     "swig": "^1.4.2"
   }
