--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "reload": "^2.2.1",
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
@@ -50,9 +52,11 @@
     "express": "^4.15.4",
     "express-session": "^1.15.5",
     "jquery": "^3.2.1",
+    "jquery-pjax": "^2.0.1",
     "jquery-validation": "^1.17.0",
     "md5.js": "^1.3.4",
     "mongoose": "^4.11.7",
+    "normalize.css": "^7.0.0",
     "swig": "^1.4.2",
     "ueditor": "^1.2.3"
   }
